#deploy added secret_key

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/deploy.rb
+/config/secrets.yml
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
